overhaul reload listener events